# nahasketa

./: .gitignore  README.md
C/: hashmap.c  hashtable_int.c  hastable_pello.c
C/sixel/: CMakeLists.txt  conway.c  gray_image.c  gray_image.h  main.c
bash/: chgandsed  nfs_zombie_files.md
cmake/: example_function.cmake  extract.cmake  list_dir.cmake  list_ex.cmake  mat.txt  parent.cmake  read_matrix.cmake  regex.cmake
cmake/testWrite/: CMakeLists.txt
cmake/test_fetch/: CMakeLists.txt  Readme.md  rustine  use_scotch.c
convexHullNilpotentMatrices/: conv_nilpotente.tex  genereBase.jl
cpp/: combi.cpp  equalRangeAdapter.cpp  lambda_map.cpp  lantegi.cpp  move_example.cpp  parse_str.cpp  set_memory.cpp
formation_ocaml/: blank.ml  calc.ml  calc.mli  echo.ml  expr.ml  lstmp.ml  monad.ml  monad2.ml  objet.ml  zut.ml
fortran/: 2D_to_1D.f90  4int.f90  CMakeLists.txt  adjust.f90  all.f90  appel_func.f90  assumed_shape.f90  assumed_size.f90  chk_idx.f90  clamp.f90  clause.f90  cmplx.f90  compile_build_elem.sh  concurrent.f90  conform_error.f90  construc.f90  contiguous_ex.f90  cpu_assemble.f90  cross.f90  cumsum.f90  deferred.f90  diff.f90  double_write.f90  dual_and_part.f90  dummy_arg.f90  elemental.f90  equal_string.f90  error_cmplx.f90  ex_format_variable.f90  ex_maxval_with_mask.f90  ex_pointer_baseval.f90  ex_unicode.f90  execute.f90  eye_without_loop.f90  fdopen_bind.f90  findloc.f90  format_csv.f90  fortran_magic_tests.ipynb  fputs_c.f90  func_pointer.f90  (+92 more)
fortran/Coarrays/: coarray2.f90  coarray3.f90  coarray_ex.f90
fortran/KillMetis/: CMakeLists.txt  dual_and_part.F90
fortran/SkotxBuildElemRepro/: CMakeLists.txt  compile_build_elem.sh  test_mesh_build_elem.F90
fortran/Timer/: CMakeLists.txt  RunningOnUntzillatx  call_back.f90  m_call_back.f90  m_utils.f90  utils.c
fortran/barycentricWalk/: barycentricWalk.f90  calc_bary.jl  cell_node.txt  neigh.txt  trace_bary.jl  x_node.txt
fortran/coarrays/: deux.f90  ex1.f90  hello.f90  loop.f90  loop_seq.f90  m_collectives.f90  sum_ex.f90
fortran/interp/: CMakeLists.txt  input_check  m_interp.f90  m_read_matrix.f90  output_check
fortran/read_vtk/: .gitignore  CMakeLists.txt  m_tools.f90  m_vtu.f90  read_vtu.f90  sm_vtu_header.f90
fortran/sixel/: CMakeLists.txt  gray_image.c  m_gray_image.F90  m_gray_image.f90  m_sixel.f90  sixel_funcs.c  sixel_write.c  test_sixel.f90
fortran/tcp_com/: CMakeLists.txt  m_dill.f90  m_str.f90  server.f90
fortran/testARB/: CMakeLists.txt  README.md  compute_u.c  test_bidon.c  test_whittakerW.f90
fortran/testKind/: CMakeLists.txt  testKind.cmake
fortran/testLapack/: CMakeLists.txt  m_linalg.F90  main.F90  preload.intel  test_openblas.f90
fortran/testLapack/cmake/: FindMKL.cmake
fortran/testMUMPS/: CMakeLists.txt  README.md  preload_skel.cmake  zsimpletest.F90
fortran/testMetis/: CMakeLists.txt  test_metis_dual_f.f90
fortran/test_meshBuildElem/: test_mesh_build_elem.F90
fortran/testiso/: CMakeLists.txt  haha.c  use_haha.f90
fortran/wrapTest/: CMakeLists.txt  Readme.md  m_asserts.f90  m_tests.f90  parse_tests_file.cmake
fortran/μεαπ/: CMakeLists.txt  advec.f90
gdb/: coucou.f90  ex_1.f90  gdb_2020.org  gdb_hash_prints.scr  gdb_mpi.scr  p_triangle.f90  pretty.gdb  pretty.py
gmsh/: simple_3D.geo
gtk/: CMakeLists.txt  main.cpp
julia/: allocation.jl  comparedThread.jl  exportMPI4Julia.sh  findNull.jl  heatKernel.jl  inclus.jl  mandel.jl  mesh_dual.jl  mod.f  testMPI.jl  test_prec.jl  use_mod.jl
julia/FeKode/: Assembler.jl  BasisFunctions.jl  IntegrationFormula.jl  Laplacian.jl  Mesh.jl  ReadMesh.jl  ReadMeshAscii.jl  Readme.org  readme.org  squareGenerate.jl  twoTriangles.vtk  vtkSquareGenerate.jl  wavEquation.jl
julia/FeKode.jl/: Readme.org  zut.jl  zut2.jl
julia/FeKode.jl/src/: Assembler.jl  BasisFunction.jl  FeKode.jl  IntegrationFormula.jl  Mesh.jl  ReadMesh.jl  ReadMeshAscii.jl  squareGenerate.jl
julia/FeKode.jl/test/: Assemblers.jl  Basis.jl  Integration.jl  Meshes.jl  runtests.jl
julia/MeshDual/: compare_perf.jl  tempo.jl
julia/Tutos/: HandsOn.ipynb  IntroductionToJulia.ipynb
julia/adjoint/: linear_example.jl
julia/bindingFortran/: call_eye.jl  heat.f90  heat.jl  hehe.f90  testHeat.jl
julia/bindingFortran/withMPI/: CMakeLists.txt  communications.f90  heat.f90  heat.mod  heat_par.f90  heat_par.jl  heat_solve.f90  heat_solve.jl
julia/cone/: projette.jl  projette.sci  unused.jl
julia/hypergeom/: CMakeLists.txt  hypergeom.jl  test_whittaker.f90
julia/interfaces/: Interfaces.ipynb
julia/interfaces/C/: CMakeLists.txt  callJuliaFun.c  increment.c  myalloc.c  mysum.c  mysum2.cpp  test_apply_f.jl  test_incr.jl  test_myalloc.jl  test_mysum.jl  test_mysum2.jl  testφ.jl
julia/interfaces/fortran/withMPI/: CMakeLists.txt  communications.f90  heat.f90  heat_main.f90  heat_solve.f90  heat_solve.jl  par_error.f90  par_sum  par_sum.f90  par_sum.jl  par_sum2.f90  plot_heat.jl  test_optim.jl
julia/modulation/: README.md  edozer.jl  freq_expe.jl  waterfall.jl
julia/ouaib/: serve_potar.jl
julia/qnb/: optim_bidon.jl
julia/zakarra/: dpc.jl
ocaml/: calc.ml  calc.mli  monad2.ml  pile.ml  words.ml
python/: idees_tp.md  menu.py  test_menu.py  tp1.py
python/MDB/: idees_tp.md  tp1.py
python/ctypes/error_print/: CMakeLists.txt  README.md  call_back.c  compute_sqrt.c  error.py  pyproject.toml  setup.py.in
python/ctypes/error_print/callback/: __init__.py  error.py
python/ctypes/error_print/foo/: call_back.c
python/curses/: billard.py
python/urwid/: button1.py  cono2.py  saioak.py
scotch/: compile_deb  compile_get  compile_scotch_elem  debug_new.F90  gdb.scr  get_size.c  test_scotchElem.f90
scotch/parmetis/: CMakeLists.txt  preload.cmake  test_libparmetis_dual2.c
scotch/parmetis/cmake/Modules/: FindParMetis.cmake
scripts/: astuce  c++test  getpasswd.py  khalnotify.sh  owncloudsync  pasahitzak.py  tmux-notify.pl  tmux-notify.sh  vcalendar-filter
test_external_project/: CMakeLists.txt  metis_patch.txt  scotch_patch.txt
tmux/: a_rajouter_au_bashrc  inutil.sh  tmux-mpi  tmux_std  tmux_vim
xml/: transfo3.xsl
(+6 files in other folders)
