cmake_minimum_required(VERSION 3.10)
project(test_sixel LANGUAGES C)
if (DEFINED SIXEL_ROOT)
  find_library(SIXEL_LIB NAMES sixel PATHS ${SIXEL_ROOT}/lib NO_DEFAULT_PATH)
  message(STATUS "sixel lib : ${SIXEL_LIB}")
  find_file(SIXEL_INC NAMES sixel.h PATHS ${SIXEL_ROOT}/include NO_DEFAULT_PATH)
  message(STATUS "sixel inc : ${SIXEL_INC}")
else()
  find_library(SIXEL_LIB NAMES sixel) 
  find_file(SIXEL_INC NAMES sixel.h)
endif()
if (NOT SIXEL_LIB OR NOT SIXEL_INC)
  message(FATAL_ERROR "must find lib_sixel, please define SIXEL_ROOT containing /lib/libsixel and /include/sixel.h")
endif()
add_library(img gray_image.c gray_image.h) 
target_include_directories(img PRIVATE ${SIXEL_INC})
target_link_libraries(img ${SIXEL_LIB})
add_executable(test_sixel main.c)
target_link_libraries(test_sixel img m)
enable_testing()
add_test(lehena COMMAND $<TARGET_FILE:test_sixel>)
