cmake_minimum_required(VERSION 3.10)
project(test_sixel)
enable_language(Fortran C)
if (DEFINED SIXEL_LIB_DIR)
  find_library(SIXEL_LIB NAMES sixel PATHS ${SIXEL_LIB_DIR} NO_DEFAULT_PATH)
  message(STATUS "sixel lib : ${SIXEL_LIB}")
else()
  find_library(SIXEL_LIB NAMES sixel) 
  message(STATUS "sixel lib : ${SIXEL_LIB}")
endif()
if (NOT SIXEL_LIB)
  message(FATAL_ERROR "must find lib_sixel")
endif()
add_library(img sixel_funcs.c m_gray_image.f90 gray_image.c) 
target_link_libraries(img ${SIXEL_LIB})
add_executable(test_sixel test_sixel.f90)
target_link_libraries(test_sixel img)
enable_testing()
add_test(lehena COMMAND $<TARGET_FILE:test_sixel>)
