cmake_minimum_required(VERSION 3.10)
project(tcp_com)
enable_language(Fortran)
if (DEFINED ENV{DILL_LIB_DIR})
  find_library(DILL_LIB NAMES dill PATHS $ENV{DILL_LIB_DIR})
else()
  message(FATAL_ERROR "must define DILL_LIB_DIR")
endif()
add_library(tcp m_dill.f90)
target_link_libraries(tcp ${DILL_LIB})
add_executable(tcp_server server.f90)
target_link_libraries(tcp_server tcp)
